[tool.poetry]
name = "amyrin-bot"
version = "0.1.0"
description = "cool discord bot i think"
authors = ["syrice"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "amyrin_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
discord-py = "2.1.0"
dateparser = "1.1.6"
mystbin-py = "5.1.0"
better-ipc = "2.0.1"
humanize = "4.4.0"
psutil = "5.9.4"
requests = "2.28.2"
expr-py = "0.3.0"
playwright = "1.29.1"
jishaku = "2.5.1"
beautifulsoup4 = "4.11.1"
python-levenshtein = "0.20.9"
fuzzywuzzy = "0.18.0"
humanfriendly = "10.0"
sphobjinv = "2.3.1"
lxml = "4.9.2"
python-magic = "0.4.27"
yt-dlp = "2023.1.6"
imagetext-py = "2.1.2"
pillow = "9.4.0"
expiringdict = "1.2.2"
eyed3 = "0.9.7"
emoji = "2.2.0"
wand = "0.6.11"
asyncpg = "0.27.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
